# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/: game_engine.py
brain_games/game_engine/: game_engine.py
brain_games/games/: calc.py  even.py  game.py  game_engine.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
