[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games include five logic games: brain even, brain calc, brain gcd, brain progression, brain prime"
classifiers = [
    "Development Status :: 4 - Beta",
	"Programming Language :: Python",
    "Topic :: Games/Entertainment :: Puzzle Games"
]
authors = ["Mikhail <crazyminer398@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Un1que11/python-project-lvl1.git"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
